# programista-ircfs

./: CMakeLists.txt  README.md
irc/: CMakeLists.txt  common.hpp  irc.cpp  irc.hpp
src/: CMakeLists.txt  main.cpp
